--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "dom-parser": "^0.1.6",
     "express": "^4.17.2",
     "nodemailer": "^6.7.2",
     "request": "^2.88.2"
