--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dom-parser": "^0.1.6",
     "express": "^4.17.2",
     "nodemailer": "^6.7.2",
+    "pug": "^3.0.2",
     "request": "^2.88.2"
   }
 }
