--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev:start": "nodemon --watch views --ext pug && js index.js",
+    "dev:start": "nodemon --watch views --watch ./ --ext pug,js index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
