--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0-rc.10",
     "dom-parser": "^0.1.6",
     "express": "^4.17.2",
+    "mongoose": "^6.1.8",
     "nodemailer": "^6.7.2",
     "pug": "^3.0.2",
     "request": "^2.88.2"
