--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "dom-parser": "^0.1.6",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "mongoose": "^6.1.8",
     "nodemailer": "^6.7.2",
